--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ``` bash
 TELEGRAM_TOKEN = '5619065755:AAE-y3LbNOLKI1K30ZH4mJ7vJ7VHEbMx0CA'
 TELEGRAM_SUPPORT_CHAT_ID = '323090420'
+WELCOME_MESSAGE='Привет, это чат поддержки Shark Team. /n Напиши свой вопрос и в ближайшее время к чату присоединится оператор'
